# OSL-Control

./: Protocol.md  README.md  can_example_2026.py  can_example_position_20251125_oop_gait_vgit.py  config1  load_odrive_config.py  main_fsm.py  odrive_req_arik.txt  powering.py  pyproject.toml  requirements.txt  walking_fsm.py
examples/: as5048a_example_pwm.ino  can_example_2026.py  can_example_2026_nili.py  can_example_position_20251125_oop_gait_vgit.py  can_simple_pos.py  nili_runcanexample.py  readODrive  readODrivecan.py  run_arik_example.py  simplecanexample.py  torqueControl.py  try_shutdownexample.py
loadcellinfo/SN28192/: Decoupled Matrix（SN28192）.txt
loadcellinfo/SN28192/M8123B2/PC Software/: Thumbs.db
loadcellinfo/SN28192/M8123B2/User's Manual/: M8123f32.xml  Thumbs.db
rPI/: readEncoders.py  readLoadCellCan.py  usingRpi.md
src/adapters/: __init__.py  actuator.py  imu.py  loadcell.py  osl_lib_adapter.py
src/drivers/: odrive-cansimple.dbc  odrive_can.py  odrive_can_updated.py
src/enabletools/: __init__.py  control_laws.py  filters.py  kinematics.py
src/fsm/: __init__.py  baseline.py  config_walking.json  controllers.py  two_states.py  walking.py
src/locolabtools/phaseVar/: COPYRIGHT.txt  LocolabPhaseVariableExample.py
src/state_machine/: state_machine_1.py
tests/: pywitmotionexample.py  sandbox.py  test_actuator.py  test_actuator_adapter.py  test_actuator_updated.py  test_adapters  test_adapters,py  test_adapters.py  test_adapters_real_time.py  test_calibration_changes.py  test_clock.py  test_contact_state.py  test_enabletools.py  test_env.py  test_example.py  test_fsm_offline.py  test_impedance.py  test_imu.py  test_imu_i2c.py  test_loadcell.py  test_logger.py  test_measurments.py  test_wimotion.py  test_witmotion.py  wimotionexample.py
(+27 files in other folders)
